# polyblocks-engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  engine.cpp  engine_old.cpp
PolyblocksEngine/: 3rdparty.txt  CMakeLists.txt  aabb.cc  aabb.cpp  aabb.hpp  console.cpp  console.hpp  controls.cpp  controls.hpp  engine.cpp  engine.h  global.hpp  gui.cpp  gui.hpp  model.cpp  objloader.cpp  objloader.hpp  render.cpp  render.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  utils.cpp  utils.hpp  world.cpp  world.hpp
PolyblocksEngine/maps/: test.pbm  test2.pbm  test3.pbm  test4.bmap  wrong.bmap
PolyblocksEngine/models/: cube.blend
PolyblocksEngine/resource/: example.res  mainmenu.res  window.res  wrong.res
PolyblocksEngine/shaders/: DiffuseShader.frag.glsl  DiffuseShader.fragmentshader  DiffuseShader.vert.glsl  GUI.frag.glsl  GUI.vert.glsl  SimpleVertexShader.vert.glsl  SimpleVertexShader.vertexshader  TextShader.frag.glsl  TextShader.vert.glsl  UnlitShader.frag.glsl
PolyblocksEngine/textures/: Roboto.DDS  RobotoBold.DDS  RobotoBoldLeft.DDS  RobotoClose.dds  RobotoCloser.dds  RobotoClosest.dds  RobotoClosestFixed.dds  RobotoClosestFixed.pdn  RobotoClosestFixedOutline.dds  RobotoClosestFixedOutline.pdn  RobotoClosestFixedOutline_old.dds  RobotoClosestFixed_Old.dds  RobotoHuge.dds  RobotoHuge2.dds  RobotoMono.dds  RobotoMonoBold.dds  RobotoMonoBoldOutline.dds  RobotoMonoOutline.dds  brick.dds  charmander.dds  dragon.dds  grass.DDS  grass_old.dds  sky_day.dds
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
